[gd_scene load_steps=10 format=3 uid="uid://b5pcpbo8lnroq"]

[ext_resource type="StyleBox" uid="uid://c6lpwggcxv2ig" path="res://addons/APG/Resources/Styles/ListItemDefault.tres" id="1_yfyj7"]
[ext_resource type="Texture2D" uid="uid://bj1uo6ij37hyj" path="res://addons/APG/Resources/Images/Remove.svg" id="2_bsovr"]
[ext_resource type="Texture2D" uid="uid://cythuy02r4tte" path="res://addons/APG/Resources/Images/TripleBar.svg" id="2_qio3p"]
[ext_resource type="Script" path="res://addons/APG/Scripts/SettingConfig.gd" id="2_ynlin"]
[ext_resource type="Script" path="res://addons/APG/Scripts/RearrangeButton.gd" id="4_8jtl5"]
[ext_resource type="Texture2D" uid="uid://btxiv553j61a1" path="res://addons/APG/Resources/Images/int.svg" id="5_3pj8s"]
[ext_resource type="Texture2D" uid="uid://babiia0u6alvu" path="res://addons/APG/Resources/Images/float.svg" id="6_7mkv5"]
[ext_resource type="Texture2D" uid="uid://d4hm2t6actt0e" path="res://addons/APG/Resources/Images/bool.svg" id="7_2euti"]
[ext_resource type="Texture2D" uid="uid://dadt3l0e8stgw" path="res://addons/APG/Resources/Images/String.svg" id="8_arxwh"]

[node name="SettingConfig" type="PanelContainer"]
offset_left = 228.0
offset_right = 228.0
offset_bottom = 101.0
focus_mode = 1
theme_override_styles/panel = ExtResource("1_yfyj7")
script = ExtResource("2_ynlin")

[node name="Columns" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Rearrange" type="Button" parent="Columns"]
layout_mode = 2
focus_mode = 0
keep_pressed_outside = true
icon = ExtResource("2_qio3p")
flat = true
script = ExtResource("4_8jtl5")

[node name="FieldNames" type="VBoxContainer" parent="Columns"]
layout_mode = 2

[node name="Name" type="Label" parent="Columns/FieldNames"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Name"
vertical_alignment = 1

[node name="Type" type="Label" parent="Columns/FieldNames"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Type"
vertical_alignment = 1

[node name="Default" type="Label" parent="Columns/FieldNames"]
visible = false
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Default"
vertical_alignment = 1

[node name="Fields" type="VBoxContainer" parent="Columns"]
layout_mode = 2

[node name="Name" type="LineEdit" parent="Columns/Fields"]
layout_mode = 2

[node name="Type" type="OptionButton" parent="Columns/Fields"]
layout_mode = 2
item_count = 4
popup/item_0/text = "int"
popup/item_0/icon = ExtResource("5_3pj8s")
popup/item_0/id = 0
popup/item_1/text = "float"
popup/item_1/icon = ExtResource("6_7mkv5")
popup/item_1/id = 1
popup/item_2/text = "bool"
popup/item_2/icon = ExtResource("7_2euti")
popup/item_2/id = 2
popup/item_3/text = "String"
popup/item_3/icon = ExtResource("8_arxwh")
popup/item_3/id = 3

[node name="Default" type="Control" parent="Columns/Fields"]
visible = false
layout_mode = 2

[node name="Validators" type="VBoxContainer" parent="Columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Columns/Validators"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "The field cannot be empty."
vertical_alignment = 1

[node name="Type" type="Label" parent="Columns/Validators"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "An option must be selected."

[node name="Default" type="Label" parent="Columns/Validators"]
visible = false
layout_mode = 2

[node name="Delete" type="Button" parent="Columns"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_bsovr")
flat = true

[connection signal="button_down" from="Columns/Rearrange" to="." method="_on_rearrange_button_down"]
[connection signal="text_changed" from="Columns/Fields/Name" to="." method="_on_name_text_changed"]
[connection signal="item_selected" from="Columns/Fields/Type" to="." method="_on_type_item_selected"]
[connection signal="button_up" from="Columns/Delete" to="." method="_on_delete_button_up"]
